# Version 0.4

* Added :optional to belongs_to associations. It allows you to deal with
  categories/1/products/2 and /products/2 with just one controller.

* Cleaned up tests.

# Version 0.3

* Minor bump after three bug fixes.
* Bug fix when showing warning of constant redefinition.
* Bug fix with ApplicationController not being unloaded properly on development.
* Bug fix when having root singleton resources. Calling collection_url would
  raise "NoMethodError _url", not it will call root_url.
* More comments on UrlHelpers.

# Version 0.2.1

* Bug fix when ApplicationController is already loaded when we load respond_to.

# Version 0.2.0

* Added support success/failure blocks.
* Eager loading of files to work properly in multithreaded environments.

# Version 0.1.2

* Added more helper_methods.

# Version 0.1.1

* Added Rails 2.3.0 and changed tests to work with ActionController::TestCase.

# Version 0.1.0

* Initial release. Support to I18n, singleton controllers, polymorphic
controllers, belongs_to, nested_belongs_to and url helpers.